# twirp_test

./: Makefile
python/: .gitignore  Makefile  pyproject.toml  requirements.txt
python/greeter/: client.py  server.py
python/helloworld/: __init__.py
rust/: Cargo.toml  build.rs
rust/src/: client.rs  server.rs
