[tool.poetry]
name = "twirp_test"
version = "0.1.0"
description = ""
authors = ["Ken Sato <ksato9700@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.12.2"

[tool.poetry.dev-dependencies]
twirp = "^0.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
